src/main/java/com/example/demo/core/error/exeption/ExpiredRefreshTokenException.java
package com.example.demo.core.error.exeption;


import com.example.demo.core.error.ErrorCode;

public class ExpiredRefreshTokenException extends BusinessException {

    public ExpiredRefreshTokenException(String message, ErrorCode code) {
        super(message, code);
    }
}